Android: Add basic global search for settings

--- a/Source/Android/app/src/main/res/values/strings.xml
+++ b/Source/Android/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="wiimote_motion_simulation">Motion Simulation</string>
     <string name="wiimote_motion_input">Motion Input</string>
     <string name="wiimote_extensions">Extension</string>
+    <string name="search_settings">Search settings</string>
 
     <string name="input_device">Device</string>
     <string name="input_device_all_devices">Create Mappings for Other Devices</string>
